Creato con Colaboratory

--- a/MML_Thesis_v2_noSMOTE.ipynb
+++ b/MML_Thesis_v2_noSMOTE.ipynb
@@ -56,7 +56,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "91aa17b4-d4e8-46e6-a66c-f2e4de1418a4"
+        "outputId": "a53f8cb1-28fc-47fb-989b-e764e8a97422"
       },
       "source": [
         "import os\n",
@@ -130,7 +130,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17637991-708a-463b-8a45-8b047276f17f"
+        "outputId": "6375c8ed-68cd-4eea-e5a2-4fa40fa81dc7"
       },
       "source": [
         "# Clone github repository with dataset\n",
@@ -155,11 +155,11 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'MML'...\n",
-            "remote: Enumerating objects: 53, done.\u001b[K\n",
-            "remote: Counting objects: 100% (53/53), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (52/52), done.\u001b[K\n",
-            "remote: Total 53 (delta 14), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (53/53), done.\n",
+            "remote: Enumerating objects: 56, done.\u001b[K\n",
+            "remote: Counting objects: 100% (56/56), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (55/55), done.\u001b[K\n",
+            "remote: Total 56 (delta 16), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (56/56), done.\n",
             "wdbc.data\n",
             "breast-cancer-wisconsin.data\n",
             "breast-cancer-wisconsin.names\n"
@@ -197,7 +197,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "66f6f000-be53-4d5e-8d68-dedd40c98a7a"
+        "outputId": "0a7e4348-a5f9-4daa-a847-dc5278044256"
       },
       "source": [
         "dataset_DF = pd.read_csv(target_dir+\"/breast-cancer-wisconsin.data\", names=list(names.keys()))\n",
@@ -248,7 +248,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "611cc91e-6749-4b2e-aa9c-10139a43834e"
+        "outputId": "8085d81c-6314-49e8-a800-9f204c056d89"
       },
       "source": [
         "# Non-numerical values are present in the Bare-nuclei feature\n",
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 142
         },
-        "outputId": "957a00ee-a3b5-4343-ff22-1217bbf73371"
+        "outputId": "d0a8f2cf-a382-4ca4-cd63-041c4c7cfacc"
       },
       "source": [
         "dataset_DF.head(3)"
@@ -416,7 +416,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "359ee815-48bc-4ca5-dda1-f6187badee6d"
+        "outputId": "e009329b-4b89-45a8-fe4b-72e3d3245c99"
       },
       "source": [
         "#Rimozione della feature sampcode, non utile alla fine dell'analisi che si vuole portare avanti\n",
@@ -588,7 +588,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "f4708714-19da-49e3-c4f1-73f10e826b6e"
+        "outputId": "d162ed40-b7eb-4549-b567-0c4d8231d885"
       },
       "source": [
         "# Description of only benign cancer occurances in the dataset\n",
@@ -759,7 +759,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "964547b9-932c-47b7-d86e-3a4ed56c7757"
+        "outputId": "ea992082-f26f-44d6-cd0c-eb18f73706ba"
       },
       "source": [
         "# Description of only malign cancer occurances in the dataset\n",
@@ -930,7 +930,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "481bb207-bf5e-4eec-f386-ad70fcf53310"
+        "outputId": "91177c4c-e08f-4ee5-dfd5-8c3040a10ae1"
       },
       "source": [
         "encoded = pd.concat([dataset_DF.iloc[:, 0:9], dataset_DF[\"class\"].replace(\"benign\", 0).replace(\"malign\", 1)], axis=1)\n",
@@ -1160,9 +1160,9 @@
         "id": "feoY1HfqfQwd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 447
         },
-        "outputId": "5ed8ddab-7608-420c-a8cc-2f8bd073cd18"
+        "outputId": "f7a35cb3-723b-41b5-9903-80df65adcf8d"
       },
       "source": [
         "fig, ax1 = plt.subplots(figsize=(20,10), facecolor = \"white\")\n",
@@ -1197,7 +1197,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 846
         },
-        "outputId": "3d1a432c-3d9a-4841-eb01-8105e29d9a02"
+        "outputId": "8148b28b-c5ca-415c-b2e7-77533b44183c"
       },
       "source": [
         "f,ax = plt.subplots(figsize=(15,15), facecolor=\"white\")\n",
@@ -1226,9 +1226,9 @@
         "id": "F3O79uJsRuPH",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 854
         },
-        "outputId": "9b6bef80-26a5-4570-defd-b58e9f94908a"
+        "outputId": "434c3d2d-b257-4d9d-dae6-76d9bb5d8a77"
       },
       "source": [
         "plt.subplots(3, 3, figsize = (20, 20), facecolor = \"white\")\n",
@@ -1263,9 +1263,9 @@
         "id": "RKypg7rFQAQq",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 851
         },
-        "outputId": "acd3325c-66c0-4a7d-f0eb-176f56c6849d"
+        "outputId": "1eb15ec8-ae1e-4013-cf1e-1ddccb434c47"
       },
       "source": [
         "plt.subplots(3, 3, figsize = (20, 20), facecolor = \"white\")\n",
@@ -1298,7 +1298,7 @@
           "height": 282
         },
         "id": "fv_iPcOZM-K_",
-        "outputId": "bf7f347b-1a35-42c4-bbcb-32dabb1f2f43"
+        "outputId": "74a2909d-eb41-401c-cdf9-f1bbaf2781fc"
       },
       "source": [
         "sns.boxplot(data=dataset_DF, orient='h')"
@@ -1309,7 +1309,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc6e864240>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fc389637eb8>"
             ]
           },
           "metadata": {
@@ -1339,9 +1339,9 @@
         "cellView": "both",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 837
         },
-        "outputId": "1be4f7c7-a421-4ec0-8f95-071962b1568e"
+        "outputId": "b8742f97-d38d-49d1-8027-d653b413d1de"
       },
       "source": [
         "sns.set_style(\"ticks\")\n",
@@ -1353,7 +1353,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7fdc6ec70908>"
+              "<seaborn.axisgrid.PairGrid at 0x7fc380471438>"
             ]
           },
           "metadata": {
@@ -1415,11 +1415,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "GG1TbyQ_tmgO",
-        "outputId": "94d4d37b-7e91-436c-d3e8-5351f4d9a245",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "9765a58e-a647-4493-8ee8-c3ef4b88a12e"
       },
       "source": [
         "x = pd.DataFrame(data=x, columns=['clump', 'uni_size', 'uni_shape',\t'adhesion',\t'epith_size',\t'nuclei',\t'chromatin', 'nucleoli',\t'mitoses'])\r\n",
@@ -1630,7 +1630,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 313
         },
-        "outputId": "24f35d5b-766c-4a16-c506-a5ad2e0747f3"
+        "outputId": "65aa9968-e639-42d7-8874-3e93d9108787"
       },
       "source": [
         "\n",
@@ -1690,7 +1690,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "5066a7e0-46c1-4cd9-8e06-ea202a086230"
+        "outputId": "472376d2-ad35-474a-a5b8-d805b75be770"
       },
       "source": [
         "x_pca_DF = pd.DataFrame(data=x_pca)\n",
@@ -1894,7 +1894,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4fb8e447-38c2-4316-c76c-5a581a926e57"
+        "outputId": "86146b3d-8d3f-4370-984f-f1fbf51a952c"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\n",
@@ -1923,7 +1923,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9665037197674768\n"
+            "mean score 0.966806342771713\n"
           ],
           "name": "stdout"
         }
@@ -1937,7 +1937,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
-        "outputId": "66de244a-00da-4672-bac9-8ed76b8fb6f6"
+        "outputId": "8e5afeda-032e-40c3-e000-8af91ab7a9d2"
       },
       "source": [
         "# results on the test set\n",
@@ -1993,7 +1993,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d98ddaa2-9505-49ff-d573-19e1003c3419"
+        "outputId": "28e09c99-6695-418e-a399-3d404631d320"
       },
       "source": [
         "kf = StratifiedKFold(n_splits=10, shuffle=True)\n",
@@ -2018,7 +2018,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.945884381849752\n"
+            "mean score 0.9472630102872038\n"
           ],
           "name": "stdout"
         }
@@ -2032,7 +2032,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
-        "outputId": "d9419d01-d185-42ee-d3c5-1b265bfafc72"
+        "outputId": "bd987ef8-1637-4352-dbc5-533c8e106cab"
       },
       "source": [
         "# results on the test set\n",
@@ -2084,11 +2084,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SLFv9tp4R8lK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "27b23587-a88f-45fb-8e41-7d2a5ed459fe"
+        "id": "SLFv9tp4R8lK"
       },
       "source": [
         "if tune:\n",
@@ -2110,18 +2106,8 @@
         "  print('Best p:', best_model.best_estimator_.get_params()['p'])\n",
         "  print('Best n_neighbors:', best_model.best_estimator_.get_params()['n_neighbors'])"
       ],
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Best leaf_size: 1\n",
-            "Best p: 2\n",
-            "Best n_neighbors: 5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 31,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2130,7 +2116,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42eb63a9-dd72-48e6-bdac-eb105019a28d"
+        "outputId": "7d421dc7-d4c2-45f6-b117-dbda86ec6142"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\n",
@@ -2156,12 +2142,12 @@
         "    scores.append(f1_score(pred,y_val))\n",
         "print(f\"mean score {np.mean(scores)}\")"
       ],
-      "execution_count": 53,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9615452532364298\n"
+            "mean score 0.9618385536032594\n"
           ],
           "name": "stdout"
         }
@@ -2175,7 +2161,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
-        "outputId": "c88a2d0b-8e49-461f-c6dc-498d06b74d7b"
+        "outputId": "556fd358-a843-4536-90c0-2b9a1371a0a0"
       },
       "source": [
         "# results on the test set\n",
@@ -2191,7 +2177,7 @@
         "print(f\"Recall = {recall_score(pred,y_test)}\")\n",
         "confmat(y_test, pred)"
       ],
-      "execution_count": 54,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -2262,7 +2248,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "038324e2-4637-487c-ea0c-ab4f51128c5b"
+        "outputId": "ceeb75aa-d499-4f94-da0e-6aa8b9f3c1e4"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\n",
@@ -2294,7 +2280,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9572116364028129\n"
+            "mean score 0.9553326775480475\n"
           ],
           "name": "stdout"
         }
@@ -2308,7 +2294,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 347
         },
-        "outputId": "7d975ae6-182e-4382-fedf-9b37f0d6d3fe"
+        "outputId": "1a071243-c65f-4c1c-dd6e-98b5fe8e8570"
       },
       "source": [
         "# results on the test set\n",
@@ -2394,7 +2380,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02e04bb4-b2dd-4c42-b3ab-ca2c152620c9"
+        "outputId": "f7f21c38-05a6-42c9-d092-955da7770975"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\r\n",
@@ -2425,7 +2411,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9553153656379461\n"
+            "mean score 0.965031830914184\n"
           ],
           "name": "stdout"
         }
@@ -2439,7 +2425,7 @@
           "height": 347
         },
         "id": "457C-NniS9yl",
-        "outputId": "649e28f9-3f3b-4b3e-c412-7c225bdf886e"
+        "outputId": "ad613f0b-7c7c-414e-95a9-64cbd17de4fb"
       },
       "source": [
         "# results on the test set\r\n",
