Creato con Colaboratory

--- a/MML_Thesis_v2_noSMOTE.ipynb
+++ b/MML_Thesis_v2_noSMOTE.ipynb
@@ -6,7 +6,7 @@
       "name": "MML_Thesis.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgIE8OkSsXgb0GaLdPwCki",
+      "authorship_tag": "ABX9TyONCZlYXdzbvnVMXjFDrdqW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a6f49a1-ee7c-4811-b250-97d9f0102ddf"
+        "outputId": "bf8bcd57-b7fb-49ef-ef60-20870c6641aa"
       },
       "source": [
         "import os\n",
@@ -68,7 +68,7 @@
         "from sklearn.model_selection import StratifiedKFold\n",
         "from imblearn.over_sampling import SMOTE\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+        "from sklearn.preprocessing import MinMaxScaler, StandardScaler, Normalizer\n",
         "from sklearn.metrics import f1_score\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.metrics import recall_score\n",
@@ -128,7 +128,7 @@
         "id": "AV6Hj6qybgAb"
       },
       "source": [
-        "tune = False"
+        "tune = True"
       ],
       "execution_count": 2,
       "outputs": []
@@ -140,7 +140,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6711cc9c-487f-4e01-c706-e0fa2cbb6e10"
+        "outputId": "c086555b-0e29-427f-8e67-f5734b775232"
       },
       "source": [
         "# Clone github repository with dataset\n",
@@ -165,11 +165,11 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'MML'...\n",
-            "remote: Enumerating objects: 62, done.\u001b[K\n",
-            "remote: Counting objects: 100% (62/62), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (61/61), done.\u001b[K\n",
-            "remote: Total 62 (delta 20), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (62/62), done.\n",
+            "remote: Enumerating objects: 65, done.\u001b[K\n",
+            "remote: Counting objects: 100% (65/65), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (64/64), done.\u001b[K\n",
+            "remote: Total 65 (delta 22), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (65/65), done.\n",
             "breast-cancer-wisconsin.data\n",
             "breast-cancer-wisconsin.names\n",
             "wdbc.data\n"
@@ -207,7 +207,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b78a735e-b025-4480-df7a-bcc25bdc1156"
+        "outputId": "a210ecbd-6806-4623-962d-9b517a5a6e1d"
       },
       "source": [
         "dataset_DF = pd.read_csv(target_dir+\"/breast-cancer-wisconsin.data\", names=list(names.keys()))\n",
@@ -258,7 +258,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c628fedf-87ea-44bf-9727-71e3881adcb9"
+        "outputId": "ade80357-f4c0-443e-def5-42bbdcb08f6f"
       },
       "source": [
         "for col in dataset_DF.iloc[:, 1:].columns:\r\n",
@@ -291,7 +291,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f9240d5b-94d9-4534-90be-bf40bad6ec19"
+        "outputId": "1b6ce4f8-fac7-474b-c902-4752ba4cdc54"
       },
       "source": [
         "# Non-numerical values are present in the Bare-nuclei feature\n",
@@ -345,7 +345,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b223cd21-a42f-4230-ed09-12243c20bba6"
+        "outputId": "3f0a5cb9-f754-4cd6-dea6-b21f9472ddb1"
       },
       "source": [
         "for col in dataset_DF.iloc[:, 1:].columns:\r\n",
@@ -378,7 +378,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "870d812c-2f4e-4e55-b297-fc4d91600f45"
+        "outputId": "4235707e-4fc9-4be0-bde4-bab55573b34e"
       },
       "source": [
         "dataset_DF.info()"
@@ -419,7 +419,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 142
         },
-        "outputId": "3fd03481-b263-4b73-bf47-3a35eab7426b"
+        "outputId": "4cdbdb5a-5f80-4938-944e-5467c7af509f"
       },
       "source": [
         "dataset_DF.head(3)"
@@ -532,7 +532,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "9b524528-2744-4123-dfe0-1da49ca4d0a0"
+        "outputId": "aa97c5fb-59ad-4501-a900-348c4e6a4fc5"
       },
       "source": [
         "#Rimozione della feature sampcode, non utile alla fine dell'analisi che si vuole portare avanti\n",
@@ -704,7 +704,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "09520405-f45e-4b72-b08f-38b8170d832e"
+        "outputId": "afa02f9e-d094-46c9-d306-092d8237de05"
       },
       "source": [
         "# Description of only benign cancer occurances in the dataset\n",
@@ -875,7 +875,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "5f861b52-570d-4254-c106-6389147e3f57"
+        "outputId": "16716585-b199-439a-da92-b0091ebaee4e"
       },
       "source": [
         "# Description of only malign cancer occurances in the dataset\n",
@@ -1046,7 +1046,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "f0e3f2cb-d80f-45ff-b926-89593c07264b"
+        "outputId": "a8d97bf6-9924-49eb-da59-537c0a199870"
       },
       "source": [
         "encoded = pd.concat([dataset_DF.iloc[:, 0:9], dataset_DF[\"class\"].replace(\"benign\", 0).replace(\"malign\", 1)], axis=1)\n",
@@ -1278,7 +1278,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 606
         },
-        "outputId": "ed749e21-b72a-400a-b406-f91545267a39"
+        "outputId": "093d0d92-801a-401d-a406-51b7d274a3db"
       },
       "source": [
         "fig, ax1 = plt.subplots(figsize=(20,10), facecolor = \"white\")\n",
@@ -1313,7 +1313,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 846
         },
-        "outputId": "f484f0a9-9127-462f-9bbc-4c41714082b1"
+        "outputId": "a568976f-4f8e-4a5f-cc1e-7046ac5a2993"
       },
       "source": [
         "f,ax = plt.subplots(figsize=(15,15), facecolor=\"white\")\n",
@@ -1344,7 +1344,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "82598cd3-f3b5-4b35-8c58-93e8caaab9ec"
+        "outputId": "bb969611-7863-4174-904b-19eabd6db0f7"
       },
       "source": [
         "plt.subplots(3, 3, figsize = (20, 20), facecolor = \"white\")\n",
@@ -1381,7 +1381,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "57465e70-f619-4740-af8f-76c1a9828810"
+        "outputId": "0250e29a-62dd-4553-95a6-acced820e0b8"
       },
       "source": [
         "plt.subplots(3, 3, figsize = (20, 20), facecolor = \"white\")\n",
@@ -1415,7 +1415,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "66e6fe6c-26fb-49e6-8db1-c6ac17a1387a"
+        "outputId": "c82505cf-cf5f-4191-9e16-c6c1e5dcd45c"
       },
       "source": [
         "sns.set_style(\"ticks\")\n",
@@ -1427,7 +1427,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7ffaf9f9ccd0>"
+              "<seaborn.axisgrid.PairGrid at 0x7fbd9844e390>"
             ]
           },
           "metadata": {
@@ -1466,7 +1466,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "97162c02-0918-4bed-bdc2-6a713d640d6e"
+        "outputId": "b14a8f49-d508-4738-b1a8-d1719a6882c8"
       },
       "source": [
         "#splitting data and target dataframe\n",
@@ -1691,7 +1691,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f4a87287-5fcb-4efe-ba58-64ef648d986f"
+        "outputId": "503c50ca-e9a3-404e-cf31-28eed850d5ef"
       },
       "source": [
         "scaler = StandardScaler()\n",
@@ -1746,7 +1746,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "193ff825-8ad8-48dc-9682-cf5c8b653635"
+        "outputId": "3d04a71c-fe61-4432-b7be-a2856f669c56"
       },
       "source": [
         "scaled_DF"
@@ -1956,7 +1956,7 @@
           "height": 534
         },
         "id": "fv_iPcOZM-K_",
-        "outputId": "f1582b37-3f76-4b00-fa3b-ee2e1cf7bc3e"
+        "outputId": "368c0ba0-6c52-4432-c5ad-2062f72c7aa0"
       },
       "source": [
         "sns.set(rc={'figure.figsize':(11.7,8.27)})\r\n",
@@ -1968,7 +1968,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7ffaf0729610>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbd9a8c2b90>"
             ]
           },
           "metadata": {
@@ -1998,7 +1998,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 518
         },
-        "outputId": "c4bb97bd-800d-4b8e-da3c-2122139a9617"
+        "outputId": "91cbdea5-c183-4f98-fe17-aa9a3d36752c"
       },
       "source": [
         "scaled_DF_with_labels.boxplot()"
@@ -2009,7 +2009,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7ffaecd60950>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbd96f57890>"
             ]
           },
           "metadata": {
@@ -2051,7 +2051,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 551
         },
-        "outputId": "65231dde-964c-4b3c-87de-2e72f2c50aab"
+        "outputId": "6feed17f-4137-4590-857c-dd49e44cea22"
       },
       "source": [
         "\n",
@@ -2111,7 +2111,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "12991ef3-e625-491a-d54a-5639c9c48949"
+        "outputId": "910060fe-5988-4b3b-becd-b742194c0338"
       },
       "source": [
         "x_pca_DF = pd.DataFrame(data=x_pca)\n",
@@ -2315,7 +2315,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2393569-5963-4792-b162-5ca768d30c09"
+        "outputId": "1371f571-94de-40d3-aa57-04e41efa5c16"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\n",
@@ -2344,7 +2344,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9637475870113441\n"
+            "mean score 0.9637547130289068\n"
           ],
           "name": "stdout"
         }
@@ -2358,7 +2358,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "b1113e44-df68-4714-e646-22dd5c26ddbe"
+        "outputId": "1a2d7868-e260-4f62-8c23-f5c8be4fcf5e"
       },
       "source": [
         "# results on the test set\n",
@@ -2418,7 +2418,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51bc081e-2883-45a7-ff75-e9612f73c053"
+        "outputId": "069dbf49-24c0-424f-a8bf-b5c8e86e30f6"
       },
       "source": [
         "kf = StratifiedKFold(n_splits=10, shuffle=True)\n",
@@ -2443,7 +2443,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9433004201125644\n"
+            "mean score 0.9319248457382331\n"
           ],
           "name": "stdout"
         }
@@ -2455,9 +2455,9 @@
         "id": "eo1U7WNgon1U",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 585
         },
-        "outputId": "879f716e-669e-44ff-dcc5-418dd148cc20"
+        "outputId": "ddde1438-1d16-4eb4-9855-8804bf5caa4d"
       },
       "source": [
         "# results on the test set\n",
@@ -2513,7 +2513,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "raCCnPJDRLYV"
+        "id": "raCCnPJDRLYV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24591eb3-6571-420b-8f52-c16d7387d141"
       },
       "source": [
         "if tune:\r\n",
@@ -2535,7 +2539,17 @@
         "  print('Best sample leaf:', best_model.best_estimator_.get_params()['min_samples_leaf'])"
       ],
       "execution_count": 38,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Best estimator: 70\n",
+            "Best feature: log2\n",
+            "Best sample leaf: 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2544,7 +2558,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4003d3a2-930a-41e2-f3d4-45c36c640996"
+        "outputId": "b3dd5aef-f8e7-4a83-ce49-5157fc21fcbd"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\r\n",
@@ -2575,7 +2589,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9583639971139972\n"
+            "mean score 0.9596422203444327\n"
           ],
           "name": "stdout"
         }
@@ -2586,10 +2600,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 585
         },
         "id": "457C-NniS9yl",
-        "outputId": "c12beb9b-b5b0-4c13-8365-5be03d9d06e8"
+        "outputId": "6719848f-dcf3-4737-a630-5df5118943b3"
       },
       "source": [
         "# results on the test set\r\n",
@@ -2647,7 +2661,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SLFv9tp4R8lK"
+        "id": "SLFv9tp4R8lK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66495c00-bed0-46c1-d889-644a96e0e06d"
       },
       "source": [
         "if tune:\n",
@@ -2670,7 +2688,17 @@
         "  print('Best n_neighbors:', best_model.best_estimator_.get_params()['n_neighbors'])"
       ],
       "execution_count": 41,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Best leaf_size: 1\n",
+            "Best p: 2\n",
+            "Best n_neighbors: 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2679,7 +2707,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55c7adf2-17f0-474d-b6a1-6ac1f0920520"
+        "outputId": "c5e31610-8bd8-4bfa-b77f-c91963ab6714"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\n",
@@ -2710,7 +2738,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9577302436125965\n"
+            "mean score 0.9623619597553483\n"
           ],
           "name": "stdout"
         }
@@ -2724,7 +2752,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "5e7fc22c-cf76-4b27-a0ea-86fe06c7f926"
+        "outputId": "f2a807c9-3d20-4878-9aa7-678f7f07f88c"
       },
       "source": [
         "# results on the test set\n",
@@ -2783,7 +2811,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1YHboZWDXPi9"
+        "id": "1YHboZWDXPi9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8617060b-c0d0-4701-a04a-0f993759c6b6"
       },
       "source": [
         "if (tune):\n",
@@ -2806,7 +2838,17 @@
         "  print('Best kernel:', best_model.best_estimator_.get_params()['kernel'])"
       ],
       "execution_count": 44,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Best C: 10\n",
+            "Best gamma: 0.1\n",
+            "Best kernel: rbf\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2815,7 +2857,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "292294ac-25f8-4e05-92be-6ab6a64d860a"
+        "outputId": "7cbf819a-cc1d-4302-c3a6-dbd1aaa509b0"
       },
       "source": [
         "#To avoid overfitting we use KFold Stratified (stratidication given class imbalance)\n",
@@ -2847,7 +2889,7 @@
         {
           "output_type": "stream",
           "text": [
-            "mean score 0.9585137085137084\n"
+            "mean score 0.9582103599015364\n"
           ],
           "name": "stdout"
         }
@@ -2861,7 +2903,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 585
         },
-        "outputId": "a01b7032-b116-4253-9cbf-793df61307f9"
+        "outputId": "fae16c27-729c-4ef6-bc05-b7ae2308c05d"
       },
       "source": [
         "# results on the test set\n",
@@ -2923,7 +2965,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c078f62f-ace5-4d42-8e21-a0a2bdeab5aa"
+        "outputId": "16132f41-5d42-4445-eac7-781dab659df4"
       },
       "source": [
         "final_report"
@@ -2981,25 +3023,25 @@
         "  precisions.append(final_report[el][2])\r\n",
         "  recalls.append(final_report[el][3])"
       ],
-      "execution_count": 49,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZVVDmaT-petz",
-        "outputId": "48dd1b64-cc23-4475-89ac-55e17f68b2ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "ZVVDmaT-petz",
+        "outputId": "12582fac-241f-4291-a9ba-309a729ff43a"
       },
       "source": [
         "scores = pd.DataFrame(list(zip(accuracies, f1s, precisions,recalls)), \r\n",
         "               columns =['accuracy', 'f1', 'precision','recall'], index = models)\r\n",
         "scores"
       ],
-      "execution_count": 54,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3081,19 +3123,19 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 49
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dylkQqvdp8_H",
-        "outputId": "f6ee79eb-4714-4391-83e7-01d0eea0e197",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "dylkQqvdp8_H",
+        "outputId": "7321a1b5-b5d5-4c51-8ffb-e7fa4c90e085"
       },
       "source": [
         "for i in ['accuracy', 'f1', 'precision','recall']:\r\n",
@@ -3102,7 +3144,7 @@
         "    ax.annotate(\"{:.4f}\".format(p.get_height(), 'f'), (p.get_x() + p.get_width() / 2., p.get_height()), ha='center', va='center', xytext=(0, 10), textcoords='offset points')\r\n",
         "  plt.show()"
       ],
-      "execution_count": 80,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
